# ops-data-workflow

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  启动局域网.cmd  启动局域网.command
config/: account_filters.yml  category_rules.yml  channel_profiles.yml  field_mapping.yml  reference_tables.xlsx
docs/: blockers.md  leadership_briefing.md  scoring_formula.md  同事使用说明.md
ops_data_workflow/: __init__.py  account_filters.py  ai.py  analysis_jobs.py  analysis_scope.py  asset_matching.py  attribution.py  categories.py  channel_clean.py  channel_profiles.py  cleaning_pipeline.py  comparison.py  content_ledger.py  content_metadata.py  controlled_backfill.py  dashboard.py  data_service.py  douyin_history_ledger.py  env_bridge.py  exports.py  external_context.py  feishu_ledger.py  field_mapping.py  generated_artifacts.py  handoff_validation.py  harvester_bridge.py  historical_content.py  manual_recap_evidence.py  metric_registry.py  minimax_recap.py  models.py  multimodal_recap.py  periods.py  pipeline.py  platform_sessions.py  platform_taxonomy.py  quality_report.py  range_recap_report.py  raw_cleaning.py  raw_normalization.py  (+20 more)
scripts/: consolidate_top_asset_library.py  douyin_history_ledger.py  feishu_harvester_smoke.py  start_lan.py
tests/: test_account_filters.py  test_ai.py  test_analysis_jobs.py  test_app_overview.py  test_attribution_analysis.py  test_channel_profiles.py  test_cleaning_pipeline.py  test_content_ledger_recap.py  test_content_metadata_enrichment.py  test_controlled_backfill.py  test_dashboard.py  test_douyin_history_ledger.py  (+31 more)
(+7 files in other folders)
